--- a/Allcomponent/pom.xml
+++ b/Allcomponent/pom.xml
@@ -148,6 +148,12 @@
         </dependency>
 
         <dependency>
+            <groupId>javaee</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>5</version>
+        </dependency>
+
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>2.5</version>
