--- a/Allcomponent/pom.xml
+++ b/Allcomponent/pom.xml
@@ -151,6 +151,7 @@
             <groupId>javaee</groupId>
             <artifactId>javaee-api</artifactId>
             <version>5</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
